[package]
categories = ["api-bindings", "wasm"]
description = "WasmEdge Runtime is a high-performance, extensible, and hardware optimized WebAssembly Virtual Machine for automotive, cloud, AI, and blockchain applications."
documentation = "https://wasmedge.github.io/wasmedge-rust-sdk/wasmedge_sdk/"
edition = "2021"
exclude = ["examples/"]
license = "Apache-2.0"
name = "wasmedge-sdk"
readme = "README.md"
repository = "https://github.com/WasmEdge/wasmedge-rust-sdk"
version = "0.13.2"

[dependencies]
anyhow = "1.0"
cfg-if.workspace = true
num-derive = "0.3"
num-traits = "0.2"
thiserror = "1.0.30"
wasmedge-macro.workspace = true
wasmedge-sys = { path = "crates/wasmedge-sys", version = "0.17.5", default-features = false, features = ["standalone"] }
wasmedge-types.workspace = true


[target.'cfg(target_os = "linux")'.dependencies]
async-wasi = { workspace = true, optional = true }

[features]
aot = ["wasmedge-sys/aot"]
async = ["wasmedge-sys/async", "dep:async-wasi"]
default = []
ffi = ["wasmedge-sys/ffi"]
standalone = ["wasmedge-sys/standalone"]
static = ["wasmedge-sys/static"]
wasi_crypto = ["wasmedge-sys/wasi_crypto"]
wasi_nn = ["wasmedge-sys/wasi_nn"]
wasmedge_process = ["wasmedge-sys/wasmedge_process"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[package.metadata.docs.rs]
features = ["aot", "wasi_crypto", "wasi_nn", "wasmedge_process", "ffi"]
rustdoc-args = ["--cfg", "docsrs"]